progression_reports/implement_errors_02.txt
Compiling .pio/build/atom-matrix/src/main.cpp.o
In file included from include/Hardware/Display/Matrix5x5/../IDisplay.h:5,
                 from include/Hardware/Display/Matrix5x5/Display5x5.h:4,
                 from src/Hardware/Display/Matrix5x5/Display5x5.cpp:1:
include/Hardware/Display/Matrix5x5/../Colors.h:68:14: error: #error "No color order defined! Check Device_Config.h"
   68 |             #error "No color order defined! Check Device_Config.h"
      |              ^~~~~
In file included from include/Hardware/Display/Matrix8x8/../IDisplay.h:5,
                 from include/Hardware/Display/Matrix8x8/Display8x8.h:4,
                 from src/Hardware/Display/Matrix8x8/Display8x8.cpp:2:
include/Hardware/Display/Matrix8x8/../Colors.h:68:14: error: #error "No color order defined! Check Device_Config.h"
   68 |             #error "No color order defined! Check Device_Config.h"
      |              ^~~~~
Compiling .pio/build/atom-matrix/FrameworkArduino/Esp.cpp.o
Compiling .pio/build/atom-matrix/FrameworkArduino/FirmwareMSC.cpp.o
Compiling .pio/build/atom-matrix/FrameworkArduino/FunctionalInterrupt.cpp.o
Compiling .pio/build/atom-matrix/FrameworkArduino/HEXBuilder.cpp.o
Compiling .pio/build/atom-matrix/FrameworkArduino/HWCDC.cpp.o
Compiling .pio/build/atom-matrix/FrameworkArduino/HardwareSerial.cpp.o
Compiling .pio/build/atom-matrix/FrameworkArduino/HashBuilder.cpp.o
Compiling .pio/build/atom-matrix/FrameworkArduino/IPAddress.cpp.o
Compiling .pio/build/atom-matrix/FrameworkArduino/MD5Builder.cpp.o
Compiling .pio/build/atom-matrix/FrameworkArduino/MacAddress.cpp.o
Compiling .pio/build/atom-matrix/FrameworkArduino/Print.cpp.o
In file included from include/Hardware/Display/Matrix5x5/Display5x5.h:5:
.pio/libdeps/atom-matrix/LiteLED/src/LiteLED.h:35:6: warning: #warning "LiteLED: Selected ESP32 model does not support RMT DMA access. Use of RMT DMA will be disabled." [-Wcpp]
   35 |     #warning "LiteLED: Selected ESP32 model does not support RMT DMA access. Use of RMT DMA will be disabled."
      |      ^~~~~~~
In file included from include/Hardware/Display/Matrix8x8/Display8x8.h:5:
.pio/libdeps/atom-matrix/LiteLED/src/LiteLED.h:35:6: warning: #warning "LiteLED: Selected ESP32 model does not support RMT DMA access. Use of RMT DMA will be disabled." [-Wcpp]
   35 |     #warning "LiteLED: Selected ESP32 model does not support RMT DMA access. Use of RMT DMA will be disabled."
      |      ^~~~~~~
Compiling .pio/build/atom-matrix/FrameworkArduino/Stream.cpp.o
Compiling .pio/build/atom-matrix/FrameworkArduino/StreamString.cpp.o
Compiling .pio/build/atom-matrix/FrameworkArduino/Tone.cpp.o
Compiling .pio/build/atom-matrix/FrameworkArduino/USB.cpp.o
Compiling .pio/build/atom-matrix/FrameworkArduino/USBCDC.cpp.o
Compiling .pio/build/atom-matrix/FrameworkArduino/USBMSC.cpp.o
In file included from include/Hardware/Display/Matrix5x5/Display5x5.h:5,
                 from include/Hardware/Display/DisplayFactory.h:11,
                 from src/main.cpp:5:
.pio/libdeps/atom-matrix/LiteLED/src/LiteLED.h:35:6: warning: #warning "LiteLED: Selected ESP32 model does not support RMT DMA access. Use of RMT DMA will be disabled." [-Wcpp]
   35 |     #warning "LiteLED: Selected ESP32 model does not support RMT DMA access. Use of RMT DMA will be disabled."
      |      ^~~~~~~
Compiling .pio/build/atom-matrix/FrameworkArduino/WMath.cpp.o
Compiling .pio/build/atom-matrix/FrameworkArduino/WString.cpp.o
Compiling .pio/build/atom-matrix/FrameworkArduino/base64.cpp.o
Compiling .pio/build/atom-matrix/FrameworkArduino/cbuf.cpp.o
Compiling .pio/build/atom-matrix/FrameworkArduino/chip-debug-report.cpp.o
Compiling .pio/build/atom-matrix/FrameworkArduino/esp32-hal-adc.c.o
Compiling .pio/build/atom-matrix/FrameworkArduino/esp32-hal-bt.c.o
include/Hardware/Display/Matrix8x8/Display8x8.h:25:13: error: extra qualification 'STAC::Display::Display8x8::' on member 'Display8x8' [-fpermissive]
   25 |             Display8x8::Display8x8( uint8_t pin, uint8_t numLeds, uint8_t ledType )
      |             ^~~~~~~~~~
src/Hardware/Display/Matrix8x8/Display8x8.cpp:8:9: error: redefinition of 'STAC::Display::Display8x8::Display8x8(uint8_t, uint8_t, uint8_t)'
    8 |         Display8x8::Display8x8( uint8_t pin, uint8_t numLeds, uint8_t ledType )
      |         ^~~~~~~~~~
include/Hardware/Display/Matrix8x8/Display8x8.h:25:13: note: 'STAC::Display::Display8x8::Display8x8(uint8_t, uint8_t, uint8_t)' previously defined here
   25 |             Display8x8::Display8x8( uint8_t pin, uint8_t numLeds, uint8_t ledType )
      |             ^~~~~~~~~~
include/Hardware/Display/Matrix5x5/Display5x5.h:24:13: error: extra qualification 'STAC::Display::Display5x5::' on member 'Display5x5' [-fpermissive]
   24 |             Display5x5::Display5x5( uint8_t pin, uint8_t numLeds, uint8_t ledType )
      |             ^~~~~~~~~~
src/Hardware/Display/Matrix5x5/Display5x5.cpp:7:9: error: redefinition of 'STAC::Display::Display5x5::Display5x5(uint8_t, uint8_t, uint8_t)'
    7 |         Display5x5::Display5x5( uint8_t pin, uint8_t numLeds, uint8_t ledType )
      |         ^~~~~~~~~~
include/Hardware/Display/Matrix5x5/Display5x5.h:24:13: note: 'STAC::Display::Display5x5::Display5x5(uint8_t, uint8_t, uint8_t)' previously defined here
   24 |             Display5x5::Display5x5( uint8_t pin, uint8_t numLeds, uint8_t ledType )
      |             ^~~~~~~~~~
*** [.pio/build/atom-matrix/src/Hardware/Display/Matrix8x8/Display8x8.cpp.o] Error 1
*** [.pio/build/atom-matrix/src/Hardware/Display/Matrix5x5/Display5x5.cpp.o] Error 1
include/Hardware/Display/Matrix5x5/Display5x5.h:24:13: error: extra qualification 'STAC::Display::Display5x5::' on member 'Display5x5' [-fpermissive]
   24 |             Display5x5::Display5x5( uint8_t pin, uint8_t numLeds, uint8_t ledType )
      |             ^~~~~~~~~~
*** [.pio/build/atom-matrix/src/main.cpp.o] Error 1
================================================================ [FAILED] Took 7.56 seconds ================================================================

Environment    Status    Duration
-------------  --------  ------------
atom-matrix    FAILED    00:00:07.564
=========================================================== 1 failed, 0 succeeded in 00:00:07.564 ===========================================================
